# ClaimDoneRemover

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CREDITS.md  ClaimDoneRemover.pyw  README.md  dev_requirements.txt  main.pyw  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: black.yml  codeql-analysis.yml  python-package.yml
cdremover/: config.json  config.py  get_refresh.py  main.py  main.pyw  praw-example.ini  praw.ini
cdremover/helpers/: __init__.py  config_tkinter.py  file.py  global_vars.py  logger.py  misc.py  praw_tkinter.py  set_defaults.py
docs/source/: about.rst  conf.py  config-options.rst  credits.rst  faq.rst  index.rst  installation.rst  modes.rst  setup.rst
helpers/: __init__.py  config_tkinter.py  file.py  global_vars.py  logger.py  misc.py  praw_tkinter.py  set_defaults.py
