[tool.poetry]
name = "claimdoneremover"
version = "5.16.87"
description = "Claim Done Remover, shortened to CDR, is a program designed for r/TranscribersOfReddit users to allow them to automatically delete claim, done (and anything else) comments after a certain trigger happens."
authors = ["Theodore Hua <contact@theodorehua.dev>"]
license = "MPL-2.0"

[tool.poetry.dependencies]
python = "^3.7"
praw = "~7.5.0"
configparser = "~5.2.0"
ttkthemes = "~3.2.2"
matplotlib = "~3.5.1"
requests = "~2.27.1"
packaging = "~21.3"

[tool.poetry.dev-dependencies]
black = "~22.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
